# multi-agent-situational-awareness

./: .gitignore  README.md  README.zh-CN.md  progress.md  task_plan.md  任务书-肖翰.extracted.txt
app/: README.md  README.zh-CN.md  pyproject.toml  run_demo.py  run_experiments.py  run_frontend.py  run_render.py
app/src/mas_platform/: __init__.py  api.py  cli.py  config.py  entities.py  simulation.py  visualization.py  web_frontend.py
app/web/: package.json
app/web/src/: App.jsx  experimentInsights.test.js  styles.css
backend/: README.md  pyproject.toml
backend/scripts/: generate_chapter6_figures.py  generate_chapter6_journal_figures.py
backend/src/mas_platform/: api.py  cli.py  config.py  entities.py  simulation.py  web_frontend.py
backend/tests/: test_api_experiment_metrics.py  test_simulation_coordination.py
docs/superpowers/plans/: 2026-04-16-experiment-backend.md  2026-04-16-frontend-i18n.md  2026-04-16-repo-reorg.md  2026-04-18-frontend-command-stage-redesign.md  2026-04-20-analysis-page-comparison-clarity.md  2026-04-20-simulation-stage-refresh.md  2026-04-21-tradeoff-tooltip-judgment.md  2026-04-24-communication-effectiveness.md
docs/superpowers/specs/: 2026-04-16-experiment-backend-design.md  2026-04-16-frontend-i18n-design.md  (+6 more)
docs/thesis/: 基于Multi-Agent的态势精准感知平台-课题申报.extracted.txt  论文写作骨架.md
docs/worklog/: findings.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  dashboardModel.js  dashboardModel.test.js  experimentInsights.js  experimentInsights.test.js  i18n.js  i18n.test.js  styles.css
(+14 files in other folders)
